updated swagger, added update card description functionality
